silta-cluster/docs/kyverno-policies/restrict-seccomp.yaml
# Name: 
#   Restrict Seccomp
# Description:
#   Use of custom Seccomp profiles is disallowed. The fields
#   spec.securityContext.seccompProfile.type,
#   spec.containers[*].securityContext.seccompProfile.type,
#   spec.initContainers[*].securityContext.seccompProfile.type, and
#   spec.ephemeralContainers[*].securityContext.seccompProfile.type
#   must be unset or set to `RuntimeDefault` or `Localhost`.
# Source: 
#   https://raw.githubusercontent.com/kyverno/policies/main/pod-security/baseline/restrict-seccomp/restrict-seccomp.yaml
# Modification: 
#   audit -> enforce
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
  annotations:
    policies.kyverno.io/title: Restrict Seccomp
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/description: >-
      The seccomp profile must not be explicitly set to Unconfined. This policy, 
      requiring Kubernetes v1.19 or later, ensures that seccomp is unset or 
      set to `RuntimeDefault` or `Localhost`.      
spec:
  background: true
  validationFailureAction: Enforce
  rules:
    - name: check-seccomp
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Use of custom Seccomp profiles is disallowed. The fields
          spec.securityContext.seccompProfile.type,
          spec.containers[*].securityContext.seccompProfile.type,
          spec.initContainers[*].securityContext.seccompProfile.type, and
          spec.ephemeralContainers[*].securityContext.seccompProfile.type
          must be unset or set to `RuntimeDefault` or `Localhost`.          
        pattern:
          spec:
            =(securityContext):
              =(seccompProfile):
                =(type): "RuntimeDefault | Localhost"      
            =(ephemeralContainers):
            - =(securityContext):
                =(seccompProfile):
                  =(type): "RuntimeDefault | Localhost"
            =(initContainers):
            - =(securityContext):
                =(seccompProfile):
                  =(type): "RuntimeDefault | Localhost"
            containers:
            - =(securityContext):
                =(seccompProfile):
                  =(type): "RuntimeDefault | Localhost"
